--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ add_executable(PasswordSender main.cpp
     qfcgiapp.cpp
     requestdownloader.cpp
     parsedrequest.cpp
+    uploadedfile.cpp
+    formfield.cpp
   )
 
 target_link_libraries(PasswordSender qfcgi Qt5::Core Qt5::Network vmime)
