--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ add_executable(PasswordSender main.cpp
     parsedrequest.cpp
     uploadedfile.cpp
     formfield.cpp
+    submittedsecret.cpp
   )
 
 target_link_libraries(PasswordSender qfcgi Qt5::Core Qt5::Network vmime)
