--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(PasswordSender main.cpp
     uploadedfile.cpp
     formfield.cpp
     submittedsecret.cpp
+    emailsender.cpp
   )
 
 target_link_libraries(PasswordSender qfcgi Qt5::Core Qt5::Network vmime)
