--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(PasswordSender main.cpp
     formfield.cpp
     submittedsecret.cpp
     emailsender.cpp
+    usererror.cpp
   )
 
 target_link_libraries(PasswordSender qfcgi Qt5::Core Qt5::Network vmime)
