Implement QFile based vmime input stream adapter
Untested so far, because I keep the request in memory (which will
probably change in the future).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(PasswordSender main.cpp
     usererror.cpp
     requestuploader.cpp
     outputstreamqiodeviceadapter.cpp
+    inputstreamqfileadapter.cpp
   )
 
 target_link_libraries(PasswordSender qfcgi Qt5::Core Qt5::Network vmime)
